@@ -33,7 +33,12 @@ fx <- cxxfunction(
     list( 
         direct = signature( x_ = "numeric", y_ = "numeric" ), 
         extractor = signature( x_ = "numeric", y_ = "numeric" ), 
-        sugar_nona = signature( x_ = "numeric", y_ = "numeric" )
+        sugar_nona = signature( x_ = "numeric", y_ = "numeric" ), 
+        
+        assign_direct = signature( x_ = "numeric", y_ = "numeric" ), 
+        assign_extractor = signature( x_ = "numeric", y_ = "numeric" ), 
+        assign_sugar_nona = signature( x_ = "numeric", y_ = "numeric" ) 
+        
     ) , 
     list( 
         direct = '
@@ -53,23 +58,61 @@ fx <- cxxfunction(
         for( int j=0; j<1000; j++) 
             res = sugar_nona__( x_, y_ ) ;
         return res ;
+        ', 
+        
+        assign_direct = '
+        NumericVector x( x_ ), y( y_ ), z( x.size() ) ;
+        int n = x.size() ;
+        for( int j=0; j<1000; j++)
+            for( int i=0; i<n; i++) 
+                z[i] = x[i] * y[i] ;
+        return z ; 
+        ', 
+        
+        assign_extractor = '
+        NumericVector x( x_ ), y( y_ ), z( x.size() ) ;
+        Fast<NumericVector> fx(x), fy(y), fz(z)  ;
+        int n = x.size() ;
+        for( int j=0; j<1000; j++)
+            for( int i=0; i<n; i++) 
+                fz[i] = fx[i] * fy[i] ;
+        return z ; 
+        ', 
+        
+        assign_sugar_nona = '
+        NumericVector x( x_ ), y( y_ ), z( x.size() ) ;
+        sugar::Nona< REALSXP, true, NumericVector > nx(x), ny(y) ;
+        for( int j=0; j<1000; j++)
+            z = nx * ny ;
+        return z ;
         '
     ) , plugin = "Rcpp", includes = inc )
 
-x <- rnorm( 1000000 )
-y <- rnorm( 1000000 )
+x <- rnorm( 100000 )
+y <- rnorm( 100000 )
 
 # resolving
-invisible( { fx$direct( 1.0, 1.0 ); fx$extractor( 1.0, 1.0 ); fx$sugar_nona(1.0, 1.0 )} )
-    
+invisible( getDynLib( fx ) )
+
 require( rbenchmark )
+
 benchmark( 
     fx$direct( x, y ), 
     fx$extractor( x, y ), 
     fx$sugar_nona( x, y ), 
+    
     replications = 1, 
     columns=c("test", "elapsed", "relative", "user.self", "sys.self"),
     order="relative"
 )
     
+benchmark( 
+    fx$assign_direct( x, y ), 
+    fx$assign_extractor( x, y ), 
+    fx$assign_sugar_nona( x, y ), 
+    
+    replications = 1, 
+    columns=c("test", "elapsed", "relative", "user.self", "sys.self"),
+    order="relative"
+)     
 
