@@ -1,3 +1,11 @@
+2010-09-27  Romain Francois <romain@r-enthusiasts.com>
+
+        * inst/include/Rcpp/traits/is_sugar_expression.h: new trait class
+        to recognize sugar expressions
+        
+        * inst/include/Rcpp/vector/Vector.h: operator=( sugar expression) 
+        no longer allocate unnecessary memory. 
+
 2010-09-26  Romain Francois <romain@r-enthusiasts.com>
 
         * inst/include/Rpp/Fast.h: new helper class Rcpp::Fast that allows
